# pytest-cairo

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  run_tests  setup.py  tox.ini
.github/workflows/: ci.yml
pytest_cairo/: __init__.py  context.py  contract.py  contract_index.py  fixture.py  function.py  helpers.cairo  info_collector.py  patch.py  plugin.py
tests/: __init__.py  test_context.py  test_contract.py  test_function.py  test_info_collector.py  test_plugin.py
tests/resources/: contract.cairo  test_contract.cairo
tests/resources/contracts/: contract.cairo  contract_with_state_updates.cairo
tests/resources/contracts/interfaces/: IContract.cairo
tests/resources/tests/: test_contract.cairo  test_contract_with_fixtures.cairo  test_contract_with_state_updates.cairo  test_helpers.cairo
